--- a/djangoproject/requirements.txt
+++ b/djangoproject/requirements.txt
@@ -1,6 +1,11 @@
 beautifulsoup4==4.6.0
+cairocffi==1.0.2
+CairoSVG==2.4.0
 certifi==2019.3.9
+cffi==1.12.3
 chardet==3.0.4
+cssselect2==0.2.1
+defusedxml==0.6.0
 Django==2.1.7
 django-bootstrap4==0.0.8
 django-crispy-forms==1.7.2
@@ -18,16 +23,20 @@ html5lib==1.0.1
 idna==2.8
 Pillow==5.4.1
 psycopg2==2.7.7
+pycparser==2.19
 pydotplus==2.0.2
 pyparsing==2.4.0
+Pyphen==0.9.5
 pytz==2018.9
 PyYAML==5.1
 requests==2.22.0
 simplejson==3.16.0
 six==1.12.0
+tinycss2==1.0.2
 Unidecode==1.0.23
 urllib3==1.25.3
 wagtail==2.5.1
 wagtailfontawesome==1.1.4
+WeasyPrint==47
 webencodings==0.5.1
 Willow==1.1
