--- a/djangoproject/requirements.txt
+++ b/djangoproject/requirements.txt
@@ -14,6 +14,7 @@ django-fontawesome==1.0
 django-fontawesome-5==1.0.16
 django-grappelli==2.12.2
 django-modelcluster==4.4
+django-rest-framework==0.1.0
 django-static-fontawesome==5.0.8.1
 django-taggit==0.24.0
 django-treebeard==4.3
@@ -21,6 +22,8 @@ djangorestframework==3.9.4
 draftjs-exporter==2.1.6
 html5lib==1.0.1
 idna==2.8
+npm==0.1.1
+optional-django==0.1.0
 Pillow==5.4.1
 psycopg2==2.7.7
 pycparser==2.19
