--- a/djangoproject/requirements.txt
+++ b/djangoproject/requirements.txt
@@ -6,6 +6,7 @@ cffi==1.12.3
 chardet==3.0.4
 cssselect2==0.2.1
 defusedxml==0.6.0
+Django==2.2.4
 django-bootstrap4==0.0.8
 django-crispy-forms==1.7.2
 django-extensions==2.1.7
@@ -20,10 +21,10 @@ django-treebeard==4.3
 djangorestframework==3.9.4
 draftjs-exporter==2.1.6
 html5lib==1.0.1
+httpagentparser==1.8.4
 idna==2.8
 npm==0.1.1
 optional-django==0.1.0
-Pillow==5.4.1
 psycopg2==2.7.7
 pycparser==2.19
 pydotplus==2.0.2
@@ -34,6 +35,7 @@ PyYAML==5.1
 requests==2.22.0
 simplejson==3.16.0
 six==1.12.0
+sqlparse==0.3.0
 tinycss2==1.0.2
 Unidecode==1.0.23
 urllib3==1.25.3
@@ -42,3 +44,4 @@ wagtailfontawesome==1.1.4
 WeasyPrint==47
 webencodings==0.5.1
 Willow==1.1
+django-webp==1.0.11
